update path structure and landing page

--- a/themes/hugo-geekdoc/layouts/partials/product-nav.html
+++ b/themes/hugo-geekdoc/layouts/partials/product-nav.html
@@ -4,7 +4,7 @@
       <ul>
         {{- $product := .Page.Params.product | default "Upbound" -}}
         <li {{- if eq $product "Upbound" }} class="active" {{- end -}}>
-          <a href="{{.Site.BaseURL}}">Upbound</a>
+          <a href="/upbound">Upbound</a>
         </li>
       </ul>
     </div>
