make product nav mobile responsive

--- a/themes/hugo-geekdoc/layouts/_default/baseof.html
+++ b/themes/hugo-geekdoc/layouts/_default/baseof.html
@@ -26,10 +26,10 @@
     >
       <input type="checkbox" class="hidden" id="menu-control" />
       <input type="checkbox" class="hidden" id="menu-header-control" />
+      {{ partial "site-header" }}
+      
       {{ $navEnabled := default true .Page.Params.GeekdocNav }}
-      {{ partial "site-header" . }}
-
-      {{ partial "product-nav" . }}
+      {{ partial "product-nav"  (dict "Root" . "MenuEnabled" $navEnabled) }}
 
       <main class="container flex flex-even">
         {{ if $navEnabled }}
