Re-enable favicons partial
The partial for favicons was commented out. This ren-enables it.

Signed-off-by: hasheddan <georgedanielmangum@gmail.com>

--- a/themes/upbound/layouts/partials/head/base.html
+++ b/themes/upbound/layouts/partials/head/base.html
@@ -8,6 +8,6 @@
 
 {{ partial "head/js/color-mode-js" . }}
 {{ partial "head/stylesheets/stylesheet" . }}
-{{/*  {{ partialCached "head/favicons" . }}  */}}
+{{ partialCached "head/favicons" . }}
 
 {{/*  {{ partial "social" . }}  */}}
