Update footer information as requested in docs-44 #73
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/themes/upbound/layouts/partials/footer/content.html
+++ b/themes/upbound/layouts/partials/footer/content.html
@@ -23,7 +23,7 @@
 
     <div class="col footer-links footer-col-1 ms-5">
         <div class="footer-heading">Product</div>
-        <div class="py-2"><a href="https://www.upbound.io/products/universal-cloud-platform">Upbound Cloud</a></div>
+        <div class="py-2"><a href="https://www.upbound.io/product/upbound">Upbound</a></div>
         <div class="py-2"><a href="https://www.upbound.io/products/universal-crossplane">Universal Crossplane</a></div>
         <div class="py-2"><a href="https://marketplace.upbound.io/">Marketplace</a></div>
         <div class="py-2"><a href="https://www.upbound.io/contact">Request Demo</a></div>
@@ -34,7 +34,6 @@
         <div class="footer-heading">Learn</div>
         <div class="py-2"><a href="https://docs.upbound.io">Documentation</a></div>
         <div class="py-2"><a href="https://www.upbound.io/faq">FAQs</a></div>
-        <div class="py-2"><a href="https://status.upbound.io/">System Status</a></div>
     </div>
 
 
