Remove backdrop override to allow clicking anywhere to close offcanvas
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -1,4 +1,4 @@
-<div class="left-sidebar-nav offcanvas-xl offcanvas-start" data-bs-backdrop="false" tabindex="-1" id="left-nav-offcanvas" aria-labelledby="left-nav-offcanvas">
+<div class="left-sidebar-nav offcanvas-xl offcanvas-start" tabindex="-1" id="left-nav-offcanvas" aria-labelledby="left-nav-offcanvas">
     <nav aria-label="Documentation section navigation" class="sticky-top container px-0">
 
         <div class="logo nav-logo-search d-flex flex-row">
