--- a/themes/upbound/layouts/partials/body/base.html
+++ b/themes/upbound/layouts/partials/body/base.html
@@ -3,7 +3,7 @@
   {{ partial "body/content-body" . }}
 </div>
 
-<div class="right-sidebar-toc offcanvas-xl offcanvas-end"  data-bs-backdrop="false" tabindex="-1" id="right-nav-offcanvas" aria-labelledby="right-nav-offcanvas">
+<div class="right-sidebar-toc offcanvas-xl offcanvas-end" tabindex="-1" id="right-nav-offcanvas" aria-labelledby="right-nav-offcanvas">
   {{ if (and (ne .Page.Params.toc false) (gt (len .TableOfContents) 40)) }}
     {{ partial "body/right-sidebar-toc" .}}
   {{ end }}
