Use bootstrap offcanvas event listeners to hide unused menu item
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/themes/upbound/assets/scss/_offcanvas.scss
+++ b/themes/upbound/assets/scss/_offcanvas.scss
@@ -1,3 +1,7 @@
+.offcanvas-backdrop{
+    background-color: inherit;
+}
+
 .nav-toggles{
 
     border-bottom: 1px solid #{$up-grey-300} !important;
