--- a/themes/upbound/assets/scss/_left-sidebar-nav.scss
+++ b/themes/upbound/assets/scss/_left-sidebar-nav.scss
@@ -62,6 +62,51 @@
         cursor: pointer;
     }
 
+    .search-icon-active{
+        padding-right: 10px;
+    }
+
+    .close-search {
+        background-color: #{$up-grey-300};
+        width: 20px;
+        height: 20px;
+        border-radius: 5px;
+    }
+
+    .no-results-container{
+        padding-left: 14px;
+    }
+
+    .no-results-text{
+        padding-left: 14px;
+        font-size: 16px;
+        color: #{$up-grey-500};
+    }
+
+    .search-results{
+        padding-top: 20px;
+    }
+
+    .search-input {
+        border: none;
+        background-color: inherit;
+        font-size: 16px;
+
+        &::placeholder{
+            color: #{$up-grey-500};
+        }
+
+        &:focus{
+            border: none !important;
+            outline: none !important;
+            box-shadow: none !important;
+        }
+    }
+
+    .grey-icon{
+        fill: #{$up-grey-500};
+    }
+
     .nav-logo-search{
         // max-width: 300px;
         border-bottom: 1px solid #{$up-grey-300} !important;
@@ -69,11 +114,6 @@
         padding-right: 12px;
         padding-top: 15px;
         padding-bottom: 15px;
-
-
-        .grey-icon{
-            fill: #{$up-grey-500};
-        }
 
         .search-icon{
             padding-right: 16px;
