--- a/themes/upbound/layouts/partials/footer/scripts.html
+++ b/themes/upbound/layouts/partials/footer/scripts.html
@@ -2,3 +2,7 @@
 <script src="{{ $js.Permalink }}" data-no-instant></script>
 {{- $jsmap := resources.Get (printf "%s.map" (index (index .Site.Data.assets "main.js") "src")) -}}
 {{- $jsmap.Publish -}}
+
+{{- $searchConfigFile := printf "search/%s.config.json" .Language.Lang -}}
+{{- $searchConfig := resources.Get "search/config.json" | resources.ExecuteAsTemplate $searchConfigFile . | resources.Minify -}}
+{{- $searchConfig.Publish -}}
