Add caching to improve build time
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/themes/upbound/layouts/partials/footer/base.html
+++ b/themes/upbound/layouts/partials/footer/base.html
@@ -1,2 +1,2 @@
-{{ partial "footer/content.html" . }}
-{{ partial "footer/scripts" . }}
+{{ partialCached "footer/content.html" . }}
+{{ partialCached "footer/scripts" . }}
