--- a/themes/upbound/layouts/_default/baseof.html
+++ b/themes/upbound/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
 
   <body>
   <div class="grid" data-bs-spy="scroll" data-bs-target="#TableOfContents">
-    {{ partial "icons/sprites" . }}
+    {{ partialCached "icons/sprites" . }}
 
     {{ partial "body/left-sidebar-nav" .}}
 
@@ -15,7 +15,7 @@
     {{ block "main" . }}
     {{ end }}
 
-    {{ partial "footer/base" . }}
+    {{ partialCached "footer/base" . }}
   </div>
 </body>
 
