--- a/themes/upbound/layouts/partials/head/meta-common.html
+++ b/themes/upbound/layouts/partials/head/meta-common.html
@@ -3,7 +3,9 @@
 <meta name="author" content="Upbound">
 <meta name="color-scheme" content="light dark">
 {{ hugo.Generator }}
-<link rel="preload" href="/fonts/Avenir-Roman.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/Avenir-Roman.woff2" as="font" type="font/woff2"
+crossorigin>
+<meta name="msvalidate.01" content="8A1818BC669E9D5B20F7042D6F3E28B4" />
 {{/*  <meta property="og:image"           content="/img/logos/up-purple.webp" />
 <meta property="twitter:card"       content="/img/crossplane-logo-og.webp" />
 <meta property="og:image:width"     content="600" />
