--- a/themes/upbound/assets/scss/_hints.scss
+++ b/themes/upbound/assets/scss/_hints.scss
@@ -18,12 +18,13 @@ $hint-note-background:          rgba(0,176,255,.1);
 
 // Style based on Furo https://github.com/pradyunsg/furo
 .admonition {
+
     margin: 1rem auto;
     padding: 0 0.5rem 0.5rem 0.5rem;
 
     background: #{$color-admonition-background};
 
-    border-radius: 0.2rem;
+    border-radius: 0.375rem;
     box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.05), 0 0 0.0625rem rgba(0, 0, 0, 0.1);
 
     overflow: hidden;
@@ -68,7 +69,10 @@ $hint-note-background:          rgba(0,176,255,.1);
 //
 
 .admonition {
-    border-left: .3rem solid;
+    border-radius: 0.375rem;
+    border: 1px solid rgba(205,205,211, 1);
+    opacity: 1;
+    background-color: rgba(248,249,249, 1);
 
     &.warning {
         border-left-color: #{$hint-warning};
@@ -78,28 +82,22 @@ $hint-note-background:          rgba(0,176,255,.1);
         }
     }
 
-    &.tip {
-        border-left-color: #{$hint-tip};
+    // &.tip {
+    //     border-left-color: #{$hint-tip};
 
-        >.admonition-title {
-            background-color: #{$hint-tip-background};
-        }
-    }
+    //     >.admonition-title {
+    //         background-color: #{$hint-tip-background};
+    //     }
+    // }
 
     &.note {
         border-left-color:#{$hint-note};
-
-        >.admonition-title {
-            background-color:#{$hint-note-background};
-        }
+        background-color:#{$hint-note-background};
     }
 
     &.important {
         border-left-color:#{$hint-important};
-
-        >.admonition-title {
-            background-color:#{$hint-important-background};
-        }
+        background-color:#{$hint-important-background};
     }
 
 
