--- a/themes/upbound/layouts/shortcodes/hint.html
+++ b/themes/upbound/layouts/shortcodes/hint.html
@@ -6,7 +6,7 @@
   "important" "circle-exclamation.svg"
   "warning" "fire.svg" }}
 
-<div class="admonition {{$cssClass}} d-flex flex-column mx-4 p-0">
+<div class="admonition {{$cssClass}} d-flex flex-column mx-0 px-4 py-2">
   <div class="admonition-title">
     {{ partial (printf "icons/%s" (index $icons $cssClass) ) }}<span class="ps-1">{{ $cssClass | humanize}}</span>
   </div>
