inline code matches

--- a/themes/upbound/assets/scss/_color-mode-light.scss
+++ b/themes/upbound/assets/scss/_color-mode-light.scss
@@ -9,8 +9,8 @@
     --home-resource-bg: #{$up-grey-100};
 
     // Single code lines inside text. Code blocks are in _code_theme_light.scss
-    --code-background: #030724;
-    --code-color: white;
+    --code-background: #F2F2F4;
+    --code-color: #686A7C;
     --code-line-number-color: #8bcbe6;
 
     // Code theme customizations
