--- a/themes/upbound/assets/scss/bootstrap/_reboot.scss
+++ b/themes/upbound/assets/scss/bootstrap/_reboot.scss
@@ -81,8 +81,6 @@ hr {
 //    margin for easier control within type scales as it avoids margin collapsing.
 
 %heading {
-  margin-top: 0; // 1
-  margin-bottom: $headings-margin-bottom;
   font-family: $headings-font-family;
   font-style: $headings-font-style;
   font-weight: $headings-font-weight;
@@ -92,32 +90,44 @@ hr {
 
 h1 {
   @extend %heading;
-  @include font-size($h1-font-size);
+  font-size: $h1-font-size;
+  margin-top: $h1-margin-top;
+  margin-bottom: $h1-margin-bottom;
 }
 
 h2 {
   @extend %heading;
-  @include font-size($h2-font-size);
+  font-size: $h2-font-size;
+  margin-top: $h2-margin-top;
+  margin-bottom: $h2-margin-bottom;
 }
 
 h3 {
   @extend %heading;
-  @include font-size($h3-font-size);
+  font-size: $h3-font-size;
+  margin-top: $h3-margin-top;
+  margin-bottom: $h3-margin-bottom;
 }
 
 h4 {
   @extend %heading;
-  @include font-size($h4-font-size);
+  font-size: $h4-font-size;
+  margin-top: $h4-margin-top;
+  margin-bottom: $h4-margin-bottom;
 }
 
 h5 {
   @extend %heading;
-  @include font-size($h5-font-size);
+  font-size: $h5-font-size;
+  margin-top: $h5-margin-top;
+  margin-bottom: $h5-margin-bottom;
 }
 
 h6 {
   @extend %heading;
-  @include font-size($h6-font-size);
+  font-size: $h6-font-size;
+  margin-top: $h6-margin-top;
+  margin-bottom: $h6-margin-bottom;
 }
 
 
