--- a/themes/upbound/assets/scss/_color-mode-light.scss
+++ b/themes/upbound/assets/scss/_color-mode-light.scss
@@ -3,14 +3,14 @@
 @mixin light-mode {
     // body and content
     --body-background: white;
-    --body-font-color: rgba(52, 58, 64, 1);
+    --body-font-color: #030724;
     --content-link-color: #{$up-purple-400};
 
     --home-resource-bg: #{$up-grey-100};
 
     // Single code lines inside text. Code blocks are in _code_theme_light.scss
-    --code-background: #e9ecef;
-    --code-color: #505a72;
+    --code-background: #F2F2F4;
+    --code-color: #686A7C;
     --code-line-number-color: #8bcbe6;
 
     // Code theme customizations
