--- a/themes/upbound/assets/scss/_hints.scss
+++ b/themes/upbound/assets/scss/_hints.scss
@@ -20,7 +20,10 @@ $hint-note-background:          rgba(0,176,255,.1);
 .admonition {
 
     margin: 1rem auto;
-    padding: 0 0.5rem 0.5rem 0.5rem;
+    padding-top: 1rem !important;
+    padding-bottom: 1rem !important;
+    padding-left: 1.5rem !important;
+    padding-right: 1.5rem !important;
 
     background: #{$color-admonition-background};
 
@@ -38,17 +41,12 @@ $hint-note-background:          rgba(0,176,255,.1);
     // Last item should have no margin, since we'll control that w/ padding
     > :last-child {
         margin-bottom: 0;
-        padding-left: .5rem;
     }
 }
 
 .admonition-title {
     position: relative;
-    margin: 0 -0.5rem 0.5rem;
-    padding-left: 1rem;
-    padding-right: .5rem;
-    padding-top: .4rem;
-    padding-bottom: .4rem;
+    margin-bottom: 0.375rem;
 
     font-weight: 500;
     line-height: 1.3;
@@ -60,6 +58,12 @@ $hint-note-background:          rgba(0,176,255,.1);
         left: 0.5rem;
         width: 1rem;
         height: 1rem;
+    }
+
+    // Helps vertically align the SVG icon because it's smaller height than the font
+    img, svg {
+        margin-bottom: 3px;
+        margin-right: 3px;
     }
 
 }
