--- a/themes/upbound/assets/scss/_hints.scss
+++ b/themes/upbound/assets/scss/_hints.scss
@@ -4,17 +4,17 @@ $bd-callout-variants: info, warning, danger !default;
 $color-admonition-background: transparent;
 
 //hint boxes
-$hint-important:                rgba(255, 145, 0, 1); //"exclamation",
-$hint-important-background:     rgba(255, 145, 0, .1);
+$hint-important:                rgba(249, 207, 174, 1); //"exclamation",
+$hint-important-background:     rgba(254, 249, 245, 1);
 
-$hint-warning:                  rgba(255, 82, 82, 1); //"fire",
-$hint-warning-background:       rgba(255, 82, 82, .1);
+$hint-warning:                  rgba(251, 180, 175, 1); //"fire",
+$hint-warning-background:       rgba(254, 245, 245, 1);
 
-$hint-tip:                      rgba(0,200,82,1);; //"check",
-$hint-tip-background:           rgba(0,200,82,.1);
+$hint-tip:                      rgba(166,213,250,1);; //"check",
+$hint-tip-background:           rgba(244,250,254,1);
 
-$hint-note:                     rgba(0,176,255,1); //"info",
-$hint-note-background:          rgba(0,176,255,.1);
+$hint-note:                     rgba(205,205,211,1); //"info",
+$hint-note-background:          rgba(248,249,249,1);
 
 // Style based on Furo https://github.com/pradyunsg/furo
 .admonition {
@@ -28,7 +28,6 @@ $hint-note-background:          rgba(0,176,255,.1);
     background: #{$color-admonition-background};
 
     border-radius: 0.375rem;
-    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.05), 0 0 0.0625rem rgba(0, 0, 0, 0.1);
 
     overflow: hidden;
     page-break-inside: avoid;
@@ -48,7 +47,7 @@ $hint-note-background:          rgba(0,176,255,.1);
     position: relative;
     margin-bottom: 0.375rem;
 
-    font-weight: 500;
+    font-weight: 900;
     line-height: 1.3;
 
     // Our fancy icon
@@ -79,11 +78,17 @@ $hint-note-background:          rgba(0,176,255,.1);
     background-color: rgba(248,249,249, 1);
 
     &.warning {
-        border-left-color: #{$hint-warning};
+        border-color: #{$hint-warning};
+        background-color: #{$hint-warning-background};
+    }
+    &.tip {
+        border-color:#{$hint-tip};
+        background-color:#{$hint-tip-background};
+    }
 
-        >.admonition-title {
-            background-color: #{$hint-warning-background};
-        }
+    &.important {
+        border-color:#{$hint-important};
+        background-color:#{$hint-important-background};
     }
 
     // &.tip {
@@ -93,16 +98,5 @@ $hint-note-background:          rgba(0,176,255,.1);
     //         background-color: #{$hint-tip-background};
     //     }
     // }
-
-    &.note {
-        border-left-color:#{$hint-note};
-        background-color:#{$hint-note-background};
-    }
-
-    &.important {
-        border-left-color:#{$hint-important};
-        background-color:#{$hint-important-background};
-    }
-
 
 }
