add radius to code block

--- a/themes/upbound/assets/scss/_code-theme.scss
+++ b/themes/upbound/assets/scss/_code-theme.scss
@@ -351,4 +351,9 @@
   /* TextWhitespace */
   .chroma .w {
   }
+
+  // Add custom border radius
+  .highlight {
+    border-radius: 0.375rem;
+  }
 }
