fix image rounding

--- a/themes/upbound/layouts/shortcodes/img.html
+++ b/themes/upbound/layouts/shortcodes/img.html
@@ -76,7 +76,7 @@
   src="{{ $original.RelPermalink }}"
   height="{{ $original.Height }}"
   width="{{ $original.Width }}"
-  class="rounded img-fluid pb-4"
+  class="rounded img-fluid mb-4"
   alt="{{ $customAlt }}"
   decoding="async">
 
