--- a/themes/upbound/assets/scss/_color-mode-dark.scss
+++ b/themes/upbound/assets/scss/_color-mode-dark.scss
@@ -8,7 +8,7 @@
     --anchor-link-color: #{darken(#FAFAFA, 25)};
 
     // Single code lines inside text. Code blocks are in _code_theme_dark.scss
-    --code-background: #3D4856;
+    --code-background: #FFFFFF15;
     --code-color: #f8f9fa;
     --code-line-number-color: #8bcbe6;
 
