--- a/themes/upbound/assets/scss/_color-mode-light.scss
+++ b/themes/upbound/assets/scss/_color-mode-light.scss
@@ -9,7 +9,7 @@
     --home-resource-bg: #{$up-grey-100};
 
     // Single code lines inside text. Code blocks are in _code_theme_light.scss
-    --code-background: #F2F2F4;
+    --code-background: #03072415;
     --code-color: #686A7C;
     --code-line-number-color: #8bcbe6;
 
