feat(DRSP): Remove icons from left nav

--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -25,12 +25,7 @@
         <div class="list-group d-flex">
             {{/*  First entry for the "Docs" section representing home.html  */}}
             <div class="d-flex flex-row px-0 py-2 my-0 nav-parent-container position-relative {{if .IsHome }}active{{end}}" id="{{.Title}}">
-                <a href="{{.Site.BaseURL}}" class="d-flex flex-grow-1 stretched-link">
-                    <div class="align-self-center icon-container">
-                        <svg class="nav-parent-icon" width="16px" height="16px"><use xlink:href="#house"/></svg>
-                    </div>
-                    <div class="">Docs</div>
-                </a>
+                <a href="{{.Site.BaseURL}}" class="d-flex flex-grow-1 stretched-link">Docs</a>
             </div>
 
             {{ $currentPage:= . }}
@@ -43,12 +38,7 @@
 
                 <!-- Parent Menu Button -->
                     <div class="d-flex flex-row px-0 py-2 my-0 nav-parent-container position-relative  {{if eq $currentPage .}}active{{end}}" id="{{.Title}}">
-                            <a href="{{.Permalink}}" class="d-flex flex-grow-1 stretched-link">
-                                <div class="align-self-center icon-container">
-                                    <svg class="nav-parent-icon" width="16px" height="16px"><use xlink:href="#{{.Params.icon | default ""}}"/></svg>
-                                </div>
-                                <div class="">{{.Title }}</div>
-                            </a>
+                        <a href="{{.Permalink}}" class="d-flex flex-grow-1 stretched-link">{{.Title }}</a>
                         {{ if .Pages }}
                         <div class="button-container z-3"> <!-- Increase z-index to put the button over the stretched-link -->
                             <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand" onclick="this.classList.toggle('down');"></div>
