--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -15,18 +15,22 @@ $up-code-font-size:           14px !default;
 $up-code-line-height:         21px !default;
 
 
-$up-purple-100:         #E9E7F2 !default;
-$up-purple-200:         #D8D4EF !default;
-$up-purple-300:         #9B8FD6 !default;
-$up-purple-400:         #6553C0 !default;
-$up-purple-500:         #353874 !default;
-$up-purple-600:         #26305E !default;
+$up-purple-50:          #F5EEFE !default;
+$up-purple-100:         #EBDFFE !default;
+$up-purple-200:         #D7BFFE !default;
+$up-purple-300:         #C39EFD !default;
+$up-purple-400:         #AF7EFD !default;
+$up-purple-500:         #9B5EFC !default;
+$up-purple-600:         #7D4CD1 !default;
 
 $up-grey-100:           #F8F8F8 !default;
 $up-grey-200:           #F1F2F4 !default;
 $up-grey-300:           #DCE0E6 !default;
 $up-grey-400:           #EAECEF !default;
 $up-grey-500:           #8E949B !default;
+
+$up-neutral-0:          #FFFFFF !default;
+$up-neutral-50:         #F2F2F4 !default;
 
 $borderDark:            #283C42 !default;
 
