--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -36,10 +36,7 @@
     }
 
     @include media-breakpoint-up(xl) {
-        padding-top: 50px;
-        padding-left: 80px;
-        padding-right: 80px;
-        padding-bottom: 80px;
+        padding: 40px;
     }
 
     @include media-breakpoint-down(xl) {
