--- a/themes/upbound/assets/scss/_right-sidebar-toc.scss
+++ b/themes/upbound/assets/scss/_right-sidebar-toc.scss
@@ -11,8 +11,6 @@
     }
 
     .border-container{
-        border-left: 2px solid #{$up-purple-300} !important;
-
         @include media-breakpoint-down(xl) {
             margin-left: 20px;
         }
@@ -60,7 +58,7 @@
         }
 
         .nav-link {
-            color: #{$up-purple-400} !important;
+            color: #{$up-neutral-600} !important;
 
             &.active {
                 font-weight: bold;
