--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -31,6 +31,7 @@ $up-grey-500:           #8E949B !default;
 
 $up-neutral-0:          #FFFFFF !default;
 $up-neutral-50:         #F2F2F4 !default;
+$up-neutral-600:        #686A7C !default;
 
 $borderDark:            #283C42 !default;
 
