feat(DRSP): WIP create top nav component

--- a/themes/upbound/assets/scss/main.scss
+++ b/themes/upbound/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import "color-modes";
 @import "lightbox";
 /* purgecss end ignore */
+@import "top-nav";
 @import "left-sidebar-nav";
 @import "right-sidebar-toc";
 @import "content-body";
