feat(DRSP): Fix active link bug

--- a/themes/upbound/assets/scss/_left-sidebar-nav.scss
+++ b/themes/upbound/assets/scss/_left-sidebar-nav.scss
@@ -141,8 +141,17 @@
         border-radius: 8px;
         padding: 12px 8px;
 
+        &:first-of-type.active {
+            color:  #{$up-purple-500};
+            background-color: #{$up-purple-50};
+        }
+
         &:hover{
             background-color: #{$up-neutral-50};
+        }
+        
+        .nav-parent-title {
+            font-size: 16px;
         }
     }
 
