--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -15,23 +15,23 @@ $up-code-font-size:           14px !default;
 $up-code-line-height:         21px !default;
 
 
-$up-purple-100:         #E9E7F2 !default;
-$up-purple-200:         #D8D4EF !default;
-$up-purple-300:         #9B8FD6 !default;
-$up-purple-400:         #6553C0 !default;
-$up-purple-500:         #353874 !default;
-$up-purple-600:         #26305E !default;
+$up-purple-100:         #F5EEFE !default;
+$up-purple-200:         #E1CEFE !default;
+$up-purple-300:         #AF7EFD !default;
+$up-purple-400:         #7D4CD1 !default;
+$up-purple-500:         #402A7B !default;
+$up-purple-600:         #21194F !default;
 
-$up-grey-100:           #F8F8F8 !default;
-$up-grey-200:           #F1F2F4 !default;
-$up-grey-300:           #DCE0E6 !default;
-$up-grey-400:           #EAECEF !default;
-$up-grey-500:           #8E949B !default;
+$up-grey-100:           #F8F9F9 !default;
+$up-grey-200:           #F2F2F4 !default;
+$up-grey-300:           #E5E6E9 !default;
+$up-grey-400:           #ECEDEF !default;
+$up-grey-500:           #9A9CA7 !default;
 
-$borderDark:            #283C42 !default;
+$borderDark:            #353950 !default;
 
-$font-color-dark:       #323C47 !default;
-$font-color-light:      #505A72 !default;
+$font-color-dark:       #030724 !default;
+$font-color-light:      #686A7C !default;
 
 $body-font-weight:        normal !default;
 $body-min-width:          20rem !default;
