--- a/themes/upbound/assets/scss/_content-body.scss
+++ b/themes/upbound/assets/scss/_content-body.scss
@@ -18,6 +18,8 @@
   .accordion {
     --bs-accordion-border-color: #{$up-grey-300};
     --bs-accordion-active-bg: #{$up-purple-100};
+    --bs-accordion-btn-focus-border-color: #{$up-purple-400};
+    --bs-accordion-button-focus-border-color: #{$up-purple-400};
     --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem $up-purple-400;
   }
 
