--- a/themes/upbound/layouts/partials/icons/sprites.html
+++ b/themes/upbound/layouts/partials/icons/sprites.html
@@ -75,6 +75,6 @@
     </symbol>
 
     <symbol id="upbound-official" viewBox="0 0 24 24">
-        <g fill="none" fill-rule="evenodd"><path stroke=#7D4CD1 stroke-width="2.2" d="m12 1.1 3.11 3h4.79v4.79l2.922 2.921a.266.266 0 0 1 0 .378l-2.922 2.92V19.9h-4.79l-2.921 2.922a.266.266 0 0 1-.378 0L8.89 19.9H4.1v-4.79L1.178 12.19a.266.266 0 0 1 0-.378L4.1 8.89V4.1h4.789l2.922-2.922A.266.266 0 0 1 12 1.1Z"/><path fill="#6553C0" d="M10.136 15.703a.567.567 0 0 0 .778 0l6.325-6.059a.511.511 0 0 0 0-.745l-.778-.745a.567.567 0 0 0-.778 0l-5.158 4.941-2.408-2.307a.567.567 0 0 0-.778 0l-.778.745a.511.511 0 0 0 0 .745l3.575 3.425Z"/></g>
+        <g fill="none" fill-rule="evenodd"><path stroke="#7D4CD1" stroke-width="2.2" d="m12 1.1 3.11 3h4.79v4.79l2.922 2.921a.266.266 0 0 1 0 .378l-2.922 2.92V19.9h-4.79l-2.921 2.922a.266.266 0 0 1-.378 0L8.89 19.9H4.1v-4.79L1.178 12.19a.266.266 0 0 1 0-.378L4.1 8.89V4.1h4.789l2.922-2.922A.266.266 0 0 1 12 1.1Z"/><path fill="#7D4CD1" d="M10.136 15.703a.567.567 0 0 0 .778 0l6.325-6.059a.511.511 0 0 0 0-.745l-.778-.745a.567.567 0 0 0-.778 0l-5.158 4.941-2.408-2.307a.567.567 0 0 0-.778 0l-.778.745a.511.511 0 0 0 0 .745l3.575 3.425Z"/></g>
     </symbol>
 </svg>
