--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -27,6 +27,7 @@ $up-grey-200:           #F2F2F4 !default;
 $up-grey-300:           #E5E6E9 !default;
 $up-grey-400:           #ECEDEF !default;
 $up-grey-500:           #9A9CA7 !default;
+$up-grey-600:           #CDCDD3 !default;
 
 $borderDark:            #353950 !default;
 
