switch a hex to variable

--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -76,7 +76,7 @@
         .about-link {
             display: inline;
             a {
-                color: #7D4CD1 !important;
+                color: #{$up-purple-400} !important;
             }
         }
 
